--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
 }
 
 header {
-    font-size: 3rem;
+    font-size: 70px;
     font-weight: bold;
     color: #ff6f61;
     padding-top: 20px;
