--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 header {
     font-size: 36px;
     font-weight: bold;
-    color: #ff6f61;
+    color: #FFA500;  /* Orange statt Coral */
     padding-top: 20px;
     letter-spacing: 3px;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
